src/styles/components/home/_products.scss
@use "../base/base" as *;

.products {
  padding-block: 0 54px;
  display: flex;
  flex-direction: column;
  gap: 48px;

  @include tab {
    padding-block: 0 110px;
  }

  &__header {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    gap: 24px;
  }

  &__controls  {
    display: none;

    @include tab {
      display: flex;
      gap: 12px;
    }
  }

  &__slider {
    display: flex;
    overflow-x: auto;
    gap: 16px;
    align-items: flex-start;
    justify-content: space-between;

    &--padding {
      padding-inline: 16px 0;
      padding-block-end: 10px;

      @include tab {
        padding-inline: 40px 0;
      }

      @include desk {
        padding-inline: 80px;
      }
    }
  }
}

